--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project",
   "version": "0.1.0",
-  "homepage": "https://ducnm71.github.io",
+  "homepage": "https://ducnm71.github.io/TechEduFront",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
